deployments/ingress-nginx-controller.yaml
apiVersion: v1
kind: Service
metadata:
  # annotations:
    # service.beta.kubernetes.io/do-loadbalancer-enable-proxy-protocol: 'true'
    # service.beta.kubernetes.io/do-loadbalancer-hostname: "k8s.hyperhive.vajid.tech"
  # labels:
    # helm.sh/chart: ingress-nginx-4.0.6
    # app.kubernetes.io/name: ingress-nginx
    # app.kubernetes.io/instance: ingress-nginx
    # app.kubernetes.io/version: 1.1.1
    # app.kubernetes.io/managed-by: Helm
    # app.kubernetes.io/component: controller
  name: ingress-nginx-controller
  namespace: ingress-nginx
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
    - name: https
      port: 443
      protocol: TCP
      targetPort: https
  selector:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/instance: ingress-nginx
    app.kubernetes.io/component: controller
