deployments/job.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jobportal-job
  namespace: jobportal
spec:
  replicas: 1
  selector:
    matchLabels:
      app: job
  template:
    metadata:
      labels:
        app: job
    spec:
      containers:
        - name: job-container
          image: ahdaan/jobportal-job:v6
          ports:
            - containerPort: 9001
          resources:
            requests:
              cpu: "250m"
              memory: "256Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: job
  namespace: jobportal
spec:
  type: ClusterIP
  ports:
    - port: 9001
      targetPort: 9001  
  selector:
    app: job
