deployments/postgres.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres-deployment
  namespace: jobportal
  labels:
    db: postgres
spec:
  serviceName: postgres
  replicas: 1
  selector:
    matchLabels:
      database: postgres
  template:
    metadata:
      name: postgres-pod
      labels:
        database: postgres
    spec:
      containers:
        - name: jobportal-postgres
          image: postgres
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: storagespace
              mountPath: /var/lib/postgresql/data
              subPath: postgres
  volumeClaimTemplates:
    - metadata:
        name: storagespace
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 10Gi
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: jobportal
spec:
  type: ClusterIP
  selector:
    database: postgres
  ports:
    - port: 5432
      targetPort: 5432
