deployments/user.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jobportal-user
  namespace: jobportal
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user
  template:
    metadata:
      labels:
        app: user
    spec:
      containers:
        - name: user-container
          image: ahdaan/jobportal-user:v1
          ports:
            - containerPort: 9002
          resources:
            requests:
              cpu: "250m"
              memory: "256Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: user
  namespace: jobportal
spec:
  type: ClusterIP
  ports:
    - port: 9002
      targetPort: 9002
  selector:
    app: user
