deployments/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jobportal-ingress
  namespace: jobportal
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"  # Enable automatic HTTP to HTTPS redirection
    nginx.ingress.kubernetes.io/server-snippets: |
      location / {
        proxy_set_header Upgrade $http_upgrade;
        proxy_http_version 1.1;
        proxy_set_header X-Forwarded-Host $http_host;
        proxy_set_header X-Forwarded-Proto $scheme;
        proxy_set_header X-Forwarded-For $remote_addr;
        proxy_set_header Host $host;
        proxy_set_header Connection "upgrade";
        proxy_cache_bypass $http_upgrade;
      }
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - jobportal.cfd
      secretName: jobportal-new-tls
  rules:
    - host: jobportal.cfd
      http:
        paths:
          # - path: "/.well-known/acme-challenge/"
          #   pathType: ImplementationSpecific
          #   backend:
          #     service:
          #       name: gateway
          #       port:
          #         number: 9091
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: gateway
                port:
                  number: 9091
